--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-offline-worker",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Worker offline vuex store",
   "main": "lib/index.js",
   "scripts": {
@@ -8,12 +8,12 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "stage-3"
+    ],
+    "plugins": [
+      "transform-runtime"
     ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "bla"
   },
   "keywords": [
     "vuex",
@@ -21,14 +21,17 @@
   ],
   "author": "Leonardo Vilarinho <leonardo-i@outlook.com>",
   "license": "MIT",
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
-  },
   "dependencies": {
     "localforage": "^1.7.1",
     "localforage-getitems": "^1.4.1",
     "localforage-setitems": "^1.4.0"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-runtime": "^6.26.0"
   }
 }
